metadata1/unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Contact Center Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending ATI Response</fullName>
        </values>
        <values>
            <fullName>Pending Customer Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IT Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Monitoring Issue</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Pending Hardware</fullName>
        </values>
        <values>
            <fullName>Pending License</fullName>
        </values>
        <values>
            <fullName>Pending Response</fullName>
        </values>
        <values>
            <fullName>Pending User</fullName>
        </values>
        <values>
            <fullName>Pending Vendor Fix</fullName>
        </values>
        <values>
            <fullName>Pending Vendor Response</fullName>
        </values>
        <values>
            <fullName>Service Dispatch Called</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ATI_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATI Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATI_Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATI Main Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Job Operations</fullName>
                </value>
                <value>
                    <fullName>Other Departments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CKSW_BASE__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKSW_BASE__PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CKSW_BASE__Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CKSW_BASE__SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMG_EmailAtt__ContactFirstName__c</fullName>
        <formula>Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMG_EmailAtt__Thread_Id__c</fullName>
        <formula>&apos;ref:&apos;&amp;LEFT($Organization.Id,4)&amp;LEFT(RIGHT($Organization.Id,7),4)&amp;&apos;.&apos;&amp;LEFT(Id,4)&amp;LEFT(RIGHT(Id,8),5)&amp;&apos;:ref&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Call Counter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Severity__c</fullName>
        <label>Severity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Accident/Injury</fullName>
                </value>
                <value>
                    <fullName>2 - Warranty Claim</fullName>
                </value>
                <value>
                    <fullName>3 - Customer Concern</fullName>
                </value>
                <value>
                    <fullName>4 - Informational</fullName>
                </value>
                <value>
                    <fullName>2 - AR Follow Up</fullName>
                    <isActive>false</isActive>
                    <label>2 - AR Follow Up</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Questions</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Confirmations</fullName>
                </value>
                <value>
                    <fullName>Other Questions</fullName>
                </value>
                <value>
                    <fullName>Payment Inquiries</fullName>
                </value>
                <value>
                    <fullName>Purchase Authorizations</fullName>
                </value>
                <value>
                    <fullName>Benefits Questions</fullName>
                </value>
                <value>
                    <fullName>Other Employee Services</fullName>
                </value>
                <value>
                    <fullName>Employment Verification</fullName>
                </value>
                <value>
                    <fullName>Applicant Questions</fullName>
                </value>
                <value>
                    <fullName>Information or Update Request</fullName>
                </value>
                <value>
                    <fullName>Problems or Service Complaints</fullName>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
                <value>
                    <fullName>Warranty Question or Request</fullName>
                </value>
                <value>
                    <fullName>Accident or Injury Report</fullName>
                </value>
                <value>
                    <fullName>Job Site Deliveries</fullName>
                </value>
                <value>
                    <fullName>Office Deliveries</fullName>
                </value>
                <value>
                    <fullName>Media Inquiries/Public Relations</fullName>
                </value>
                <value>
                    <fullName>Vendor Sales/Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collector__c</fullName>
        <formula>ATI_Job__r.Collector__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courtesy_Call_Date__c</fullName>
        <label>Courtesy Call Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Courtesy_Call_Outcome__c</fullName>
        <label>Courtesy Call Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disputed Invoice</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Sent Copy of Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Update_Due__c</fullName>
        <label>Daily Update Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Opportunity</description>
        <label>Job</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Daily_Update__c</fullName>
        <label>Last Daily Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Action_Date_Time__c</fullName>
        <label>Next Action Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Courtesy_Call_Due__c</fullName>
        <label>Next Courtesy Call Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Type__c</fullName>
        <label>Other Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved by Contact Center / Customer Service</fullName>
                </value>
                <value>
                    <fullName>Discretionary Gift Card</fullName>
                </value>
                <value>
                    <fullName>Resolved by ATI Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__ADM_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A connection to the Agile Accelerator Work object used to track Bugs, Investigations and User Stories</description>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>AgileAcceleratorCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Last_Sender_Number__c</fullName>
        <description>Used for Sticky sender to store the last sender number.</description>
        <label>Last Sender Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SOURCE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ENTITLEMENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>Cases_Last_30_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Cases Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Contact_Center_Collections_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Contact Center - Collections Case Queue</label>
        <queue>Contact_Center_Collections_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Service</label>
        <queue>Customer_Service</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SOURCE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Customer Service Queue</label>
        <queue>Customer_Service</queue>
    </listViews>
    <listViews>
        <fullName>Daily_Update_Due_Today_or_Overdue</fullName>
        <columns>Daily_Update_Due__c</columns>
        <columns>Last_Daily_Update__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Daily_Update_Due__c</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Daily Update Due Today or Overdue</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Cases_Daily_Update_Due_Today</fullName>
        <columns>Daily_Update_Due__c</columns>
        <columns>Last_Daily_Update__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Daily_Update_Due__c</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>My Cases - Daily Update Due Today</label>
    </listViews>
    <listViews>
        <fullName>My_Cases_Next_Action_Due_Today</fullName>
        <columns>Next_Action_Date_Time__c</columns>
        <columns>Last_Daily_Update__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Next_Action_Date_Time__c</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>My Cases Next Action Due Today</label>
    </listViews>
    <listViews>
        <fullName>Next_Action_Due_Today_or_Overdue</fullName>
        <columns>Next_Action_Date_Time__c</columns>
        <columns>Last_Daily_Update__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Action_Date_Time__c</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Next Action Due Today or Overdue</label>
    </listViews>
    <recordTypes>
        <fullName>IT_Helpdesk_Case</fullName>
        <active>true</active>
        <businessProcess>IT Support Process</businessProcess>
        <label>IT Helpdesk Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Case</fullName>
        <active>true</active>
        <businessProcess>Contact Center Support Process</businessProcess>
        <label>Service Case</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Resolution_Type_Required_when_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(  Status  ,&quot;Closed&quot;), 
ISBLANK(TEXT(   Resolution_Type__c   )) 
)</errorConditionFormula>
        <errorDisplayField>Resolution_Type__c</errorDisplayField>
        <errorMessage>Resolution Type must be populated when Status is Closed</errorMessage>
    </validationRules>
</CustomObject>